tests/c_programs/int_wrapping/invalid_parse/below_min.c
int main(void) {
    long long_min = -9223372036854775809; // too small for long
    return long_min;
}